# cc-plugin-wcrp

./: README.md  pyproject.toml
checks/consistency_checks/: check_attributes_match_filename.py  check_drs_consistency.py  check_drs_filename_cv.py
checks/time_checks/: check_time_bounds.py  check_time_range_vs_filename.py
plugins/: _version.py
plugins/cmip6/: cmip6.py
wcrp_plugins.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
